--- a/src/main/resources/templates/organizerGuide.html
+++ b/src/main/resources/templates/organizerGuide.html
@@ -135,7 +135,7 @@
         </div>
         <h3 class="text-xl font-bold mb-3">手数料 0円</h3>
         <p class="text-gray-600">
-          寄付金や参加費に対する手数料は一切かかりません。集まったお金は全額活動に使えます。
+          デモの開催や参加については一切手数料がかかりません。無料で全ての機能をご利用いただけます。
         </p>
       </div>
     </div>
